--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* Standard Section */
 
 * {
-    color: #ffffff;
+    color: #f9f6ee;
 }
 
 body {
@@ -12,15 +12,14 @@ body {
 .container {
     margin: 10px 5px 0px 5px;
     width: 100%;
-    overflow: auto;
 }
 
-.container .leftside {
+.leftside {
     width: fit-content;
     float: left;
 }
 
-.container .rightside {
+.rightside {
     float: right;
 }
 
@@ -29,15 +28,24 @@ body {
     background-color: #1f1e22;
     border-radius: 25px;
     width: fit-content;
-    padding: 1px 20px 1px 20px;
+    padding: 1px 20px;
 }
+
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-grow: 1;
+    flex-wrap: wrap;
+}
+
+/* All Page Special Section */
 
 .topnavbar {
     list-style-type: none;
-    margin: 0 5px;
     padding: 0;
     overflow: hidden;
-    background-color: #8e00cc;
+    background: linear-gradient(90deg, #6b0099 0%, #8e00cc 100%);
     border-radius: 25px;
     position: fixed;
     top: 10px;
@@ -57,6 +65,18 @@ body {
     background-color: #2a2c31;
 }
 
+/* Index Section */
+
+.banner {
+    text-align: center;
+    padding: 1px 20px;
+    margin: 10px 5px;
+    border-radius: 25px;
+    background-image: url(/images/Background.png);
+    background-position-x: center;
+    background-position-y: -40px;
+}
+
 /* About Section */
 
 .linkicon {
@@ -66,6 +86,7 @@ body {
 
 .pdf {
     width: 50%;
+    overflow: auto;
 }
 
 @media only screen and (max-width: 1175px) {
@@ -89,7 +110,7 @@ body {
 }
 
 .blogfooter {
-    background-color: #8e00cc;
+    background: linear-gradient(90deg, #6b0099 0%, #8e00cc 100%);
     border-radius: 25px;
     padding: 12px 0px;
     position: relative;
