More Formatting & Blog Update
Added second blog and recent blog post on homepage.

Modified styling and little parts of content to look better.

--- a/_includes/blogfooter.html
+++ b/_includes/blogfooter.html
@@ -1,5 +1,5 @@
 <footer class="blogfooter">
     <hr>
-    <p style="margin:0 25px;text-align:center;">Thank you for reading my blog!</p>
+    <p style="margin:0 25px;text-align:center;font-size:16px;">Thank you for reading my blog!</p>
     <hr>
 </footer>
