--- a/_layouts/blogpost.html
+++ b/_layouts/blogpost.html
@@ -6,17 +6,17 @@
         <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
      </head>
      <body>
-         {% include topnavbar.html %}
-         <div class="btitle">
+        {% include topnavbar.html %}
+        <div class="blogtitle">
             <h1>{{ page.title }}</h1>
             <h5 class="date">{{ page.date | date_to_string }} - Written by Elijah Iverson</h5>
         </div>
         <div class="block container">
             {{ content }}
         </div>
-        {% include topofpage.html %}
         <div class="container">
             {% include blogfooter.html %}
         </div> 
+        {% include topofpage.html %}
      </body>
 </html>
