--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,14 @@
 /* Standard Section */
 
 * {
+    font-family: sans-serif;
     color: #f9f6ee;
 }
+
+p, a {
+    font-size: 18px;
+}
+
 
 body {
     background-color: #323232;
@@ -28,7 +34,7 @@ body {
     background-color: #1f1e22;
     border-radius: 25px;
     width: fit-content;
-    padding: 1px 20px;
+    padding: 1px 20px 4px 20px;
 }
 
 .flex {
@@ -57,6 +63,7 @@ body {
     float: left;
     display: block;
     text-align: center;
+    font-weight: bold;
     padding: 14px 16px;
     text-decoration: none;
 }
@@ -97,7 +104,11 @@ body {
 
 /* Blog Section */
 
-.btitle {
+.blog {
+    text-decoration: none;
+}
+
+.blogtitle {
     margin: 20px 20px;
 }
 
