New Addition & Edits
Better Styling,
Remove a Blog,
Modified Directories,
Add Code page that reacts with GitHub API.

--- a/_includes/topnavbar.html
+++ b/_includes/topnavbar.html
@@ -1,5 +1,6 @@
 <nav class="topnavbar">
     <a href="/" style="margin-left: 20px;">Home</a>
     <a href="/blog">Blog</a>
+    <a href="/code">Code</a>
     <a href="/about">About</a>
 </nav>
