--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>{{ page.title }}</title>
-        <link rel="stylesheet" type="text/css" href="/css/styles.css">
-        <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+        <link rel="shortcut icon" type="image/ico" href="/assets/images/favicon.ico">
      </head>
      <body>
         {% include topnavbar.html %}
