--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,15 +20,6 @@ body {
     width: 100%;
 }
 
-.leftside {
-    width: fit-content;
-    float: left;
-}
-
-.rightside {
-    float: right;
-}
-
 .block {
     display: block;
     background-color: #1f1e22;
@@ -45,7 +36,7 @@ body {
     flex-wrap: wrap;
 }
 
-/* All Page Special Section */
+/* Top Universal Nav Section */
 
 .topnavbar {
     list-style-type: none;
@@ -57,6 +48,7 @@ body {
     top: 10px;
     left: 10px;
     right: 10px;
+    min-width: 400px;
 }
 
 .topnavbar a {
@@ -79,7 +71,7 @@ body {
     padding: 1px 20px;
     margin: 10px 5px;
     border-radius: 25px;
-    background-image: url(/images/Background.png);
+    background-image: url(/assets/images/Background.png);
     background-position-x: center;
     background-position-y: -40px;
 }
@@ -87,37 +79,43 @@ body {
 /* About Section */
 
 .linkicon {
-    width:50px;
-    height:50px;
-}
-
-.pdf {
-    width: 50%;
-    overflow: auto;
-}
-
-@media only screen and (max-width: 1175px) {
-    .pdf {
-        width: 100%;
-    }
+    width: 50px;
+    height: 50px;
 }
 
 /* Blog Section */
 
 .blog {
     text-decoration: none;
+    display: flex;
+    justify-content: center;
 }
 
 .blogtitle {
     margin: 20px 20px;
+    text-align: center;
 }
 
-.highlight {
+.content {
+    width: clamp(200px, 50%, 800px);
+    margin: auto;
+}
+
+.content img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+}
+
+.highlighter-rouge {
     display: block;
     background-color: #000;
-    padding: 2px 5px;
-    margin: 10px 0px;
-    width: fit-content;
+    padding: 2px 10px;
+    margin: auto;
+    max-width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .blogfooter {
